Correction Scrollbarr V5

--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ a{
 .description-menu10:hover > .animation-check{ 
     opacity:1;
     transform: translateX(-45px); 
-    width: 15%;
+    width: 13%;
     height:42%;
      
      
